<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg"
    android:padding="28dp"
    android:elevation="8dp">

    <TextView
        android:id="@+id/textViewDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_confirm_delete"
        android:textColor="#0085a4"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textViewDialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_confirm_delete"
        android:textColor="#333333"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/buttonConfirmDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_yes"
        android:backgroundTint="#ffe401"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        android:elevation="2dp"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/buttonCancelDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_no"
        android:backgroundTint="#cccccc"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        android:elevation="2dp"/>
</LinearLayout>
