<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Formal Gown 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/no_rounded_corners_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="6dp">

        <ImageView
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/formal_gown_1"
            android:scaleType="centerCrop"
            android:src="@drawable/formal_gown_1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/formal_gown_1"
            android:textColor="#0085A4"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Formal Gown 2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/no_rounded_corners_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="6dp">

        <ImageView
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/formal_gown_2"
            android:scaleType="centerCrop"
            android:src="@drawable/formal_gown_2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/formal_gown_2"
            android:textColor="#0085A4"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Formal Gown 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/no_rounded_corners_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="6dp">

        <ImageView
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/formal_gown_3"
            android:scaleType="centerCrop"
            android:src="@drawable/formal_gown_3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/formal_gown_3"
            android:textColor="#0085A4"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Formal Gown 4 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/no_rounded_corners_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="6dp">

        <ImageView
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/formal_gown_4"
            android:scaleType="centerCrop"
            android:src="@drawable/formal_gown_4" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/formal_gown_4"
            android:textColor="#0085A4"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Maxi Dress 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/no_rounded_corners_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="6dp">

        <ImageView
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/maxi_dress_1"
            android:scaleType="centerCrop"
            android:src="@drawable/maxi_dress_1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/maxi_dress_1"
            android:textColor="#0085A4"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Maxi Dress 2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/no_rounded_corners_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="6dp">

        <ImageView
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/maxi_dress_2"
            android:scaleType="centerCrop"
            android:src="@drawable/maxi_dress_2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/maxi_dress_2"
            android:textColor="#0085A4"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Maxi Dress 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/no_rounded_corners_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="6dp">

        <ImageView
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/maxi_dress_3"
            android:scaleType="centerCrop"
            android:src="@drawable/maxi_dress_3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/maxi_dress_3"
            android:textColor="#0085A4"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Maxi Dress 4 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/no_rounded_corners_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="6dp">

        <ImageView
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/maxi_dress_4"
            android:scaleType="centerCrop"
            android:src="@drawable/maxi_dress_4" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/maxi_dress_4"
            android:textColor="#0085A4"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
